--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -11,8 +11,12 @@ cmds = [
 cmds = [
     "npm run build",
     "php artisan config:cache",
-    "php artisan route:cache"
+    "php artisan route:cache",
+    "php artisan view:cache"
 ]
 
 [start]
-cmd = "php artisan serve --host=0.0.0.0 --port=$PORT"
+cmd = "php artisan serve --host=0.0.0.0 --port=8000"
+
+[variables]
+APP_ENV = "production"
