--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -9,8 +9,8 @@ cmds = [
 
 [phases.build]
 cmds = [
-    "npm run build",
-    "ls -la public/build",
+    "NODE_ENV=production npm run build",
+    "ls -la public/build/ || echo 'Build directory not found!'",
     "php artisan config:cache",
     "php artisan route:cache",
     "php artisan view:cache"
@@ -21,3 +21,4 @@ cmd = "php artisan serve --host=0.0.0.0 --port=8000"
 
 [variables]
 APP_ENV = "production"
+NODE_ENV = "production"
