--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,16 +4,16 @@ nixPkgs = ["nodejs", "php82", "php82Packages.composer"]
 [phases.install]
 cmds = [
     "composer install --no-dev --optimize-autoloader --no-interaction",
-    "npm install --legacy-peer-deps"
+    "npm install --legacy-peer-deps",
+    "mkdir -p public/build",
+    "NODE_ENV=production npm run build"
 ]
 
 [phases.build]
 cmds = [
-    "NODE_ENV=production npm run build",
-    "ls -la public/build/ || echo 'Build directory not found!'",
+    "ls -la public/build/",
     "php artisan config:cache",
-    "php artisan route:cache",
-    "php artisan view:cache"
+    "php artisan route:cache"
 ]
 
 [start]
