--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -22,3 +22,4 @@ cmd = "php artisan serve --host=0.0.0.0 --port=8000"
 [variables]
 APP_ENV = "production"
 NODE_ENV = "production"
+ASSET_URL = "https://hw-advantage-production.up.railway.app"
